change some part

--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <title>Basic Calculator</title>
     <link rel="stylesheet" type="text/css" href="calculator.css">
-    <link rel="icon" href="\Internship CodSoft\CODSOFT-Task-3\images.png">
+    <link rel="icon" href="\INTERNSHIPS\CODSOFT_TASK_3\images.png">
 </head>
 <body>
     <div class="calculator">
